# Axal

./: .gitignore  Cargo.toml  README.md  chain-config.json  chain-config2.json
src/: chain_data.rs  circuit_utils.rs  comparison.rs  lib.rs  main.rs  prover.rs  utils.rs
