[package]
name = "axal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }

# Alloy dependencies
alloy = { version = "0.11", features = ["full"] }
serde_json = "1.0" 
serde = "1.0.219"
eyre = "0.6"
plonky2 = { git = "https://github.com/okx/plonky2" }
plonky2_field = { git = "https://github.com/okx/plonky2" }
plonky2_util = { git = "https://github.com/okx/plonky2" }
plonky2_ecgfp5 = { git = "https://github.com/okx/plonky2" }
plonky2_ecdsa = { git = "https://github.com/okx/plonky2" }
plonky2_u32 = { git = "https://github.com/okx/plonky2" }
log = "0.4.17"
env_logger = "0.9.1"
clap = { version = "4.5.32", features = ["derive"] }

